GNU parted NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 3.3 (2019-10-10) [stable]

** Bug Fixes

  s390: Re-enabled virtio-attached DASD heuristics by using
  HDIO_GETGEO when probing device geometry. Fixes a bug with
  KVM virtio-blk backed by a DASD.

* Noteworthy changes in release 3.2.153 (2019-08-12) [alpha]

  Parted now recognizes NVMe devices, NVDIMM, and RAM drives.

** Bug Fixes

  Fix atari disklabel false positives by probing other labels first.

  Fix resizepart to adjust the end to be -1 sector when using iec
  power of 2 units so that the next partition can start immediately
  following the new end, just like mkpart does.

  Fix set and disk_set to not crash when there are no flags to set.

  Fix a udev cookie leak when using resizepart on device-mapper devices.

  Fix a gettext crash/error sometimes when using localized languages.

  Fix fat resize to preverve boot code, and thus not render the
  filesystem unreconized by Windows.

  Fix rescue command: the rescue command often failed to find
  filesystems due to leaving on cylinder alignment.

  libparted-fs-resize: Prevent crash resizing FAT file systems with very
  deep directories with path names over 512 bytes long.

  Use 512b sector size when communicating with device-mapper. Fixes
  problems with partitions being created too small on dm devices
  with sector sizes > 5121b

  Don't crash in the disk_set command when a disk label is not found

  libparted-fs-resize: Prevent crash resizing FAT16 file systems.

  libparted-fs-resize: Prevent crash resizing FAT16 file systems.

  If the user specifies start/end of the partition as cylinders
  and a cylinder has a size which is power of 2, then such address
  does not trigger exact placement.

  mkpart: Allow negative start value when FS-TYPE is not given

* Noteworthy changes in release 3.2 (2014-07-28) [stable]

** New Features
